# question

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/pupu/project/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  c_main.cpp  c_main.h  native-lib.cpp
app/src/main/cpp/common/: list_node.h  p_log.h
app/src/main/cpp/list/: CMakeLists.txt  add_list.h  base_list.cpp  base_list.h  cycle_list.cpp  cycle_list.h  merge_list.cpp  merge_list.h  reverse_list.cpp  reverse_list.h  sort_list.cpp  sort_list.h
app/src/main/cpp/string/: substring.h
app/src/main/java/: ByteCode.java
app/src/main/java/com/pupu/project/: JavaMain.java  KotlinMain.kt  MainActivity.java  My.java  ThreadSolution.java
app/src/main/java/com/pupu/project/hard/: LongestValidParentheses.java  MaxEnvelopes.java  MinWindow.java  PickSolution.java  RemoveDuplicateLetters.java  SplitArray.java
app/src/main/java/com/pupu/project/lists/: AdvantageCount.java  FindKfromList.java  ListNode.java  MaxSum.java  MergeTwoLists.java  RandomizedSet.java  RemoveNthFromEnd.java  ReverseList.java  Rotate.java  RotateRight.java  SearchRange.java  SwapPairs.java
app/src/main/java/com/pupu/project/random/: Solution.java  WeightSolution.java
app/src/main/java/com/pupu/question/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  activity_main2.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/pupu/project/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+42 files in other folders)
